tests/error/compile/group_missing_name.wks
# @desc: @group requires a name string

# @expect-error: Expected group name after @group

@group {
    a "cmd" +write %{{echo a}}
}
